add article details api
