# storage/api-docs/api-docs.json
@@ -94,26 +94,6 @@
                                         },
                                         "links": {
                                             "description": "Pagination links",
-                                            "properties": {
-                                                "first": {
-                                                    "type": "string",
-                                                    "example": "http://api.example.com?page=1"
-                                                },
-                                                "last": {
-                                                    "type": "string",
-                                                    "example": "http://api.example.com?page=10"
-                                                },
-                                                "prev": {
-                                                    "type": "string",
-                                                    "example": "http://api.example.com?page=1",
-                                                    "nullable": true
-                                                },
-                                                "next": {
-                                                    "type": "string",
-                                                    "example": "http://api.example.com?page=3",
-                                                    "nullable": true
-                                                }
-                                            },
                                             "type": "object"
                                         },
                                         "meta": {
@@ -126,7 +106,61 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/articles/{id}": {
+            "get": {
+                "tags": [
+                    "Articles"
+                ],
+                "summary": "Get article by ID",
+                "description": "Get article details",
+                "operationId": "b3e529eab04efb5d305b07e2e58d9869",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the article",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response with article details",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/Article"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Article not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             }
         },
         "/api/login": {
